tests/baselines/reference/ts-expect-error.errors.txt
tests/cases/conformance/directives/ts-expect-error.ts(1,1): error TS2578: Unused '@ts-expect-error' directive.
tests/cases/conformance/directives/ts-expect-error.ts(7,5): error TS2322: Type '"nope"' is not assignable to type 'number'.


==== tests/cases/conformance/directives/ts-expect-error.ts (2 errors) ====
    // @ts-expect-error
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2578: Unused '@ts-expect-error' directive.
    var ignoredCommented: number = 'nope';
    
    // @ts-expect-error
    var validCommented: string = 'nope';
    
    var invalidPlain: number = 'nope';
        ~~~~~~~~~~~~
!!! error TS2322: Type '"nope"' is not assignable to type 'number'.
    
    var validPlain: string = 'nope';
    